Fix centering of ComTable on iPhone

--- a/tier5.css
+++ b/tier5.css
@@ -197,19 +197,20 @@ display: inline-block;
 }
 
 .compTable{
-  width:80%;
-  margin:auto;
-  text-align: left;
+  /*width:90%;*/
+  margin-left: 10%;
+  /*margin:auto;*/
+  text-align: center;
 }
-
+/*
 @media screen (max-width: 767px) {
   .compTable{
     width:100%;
     text-align: left;
   }
-}
-
-/*@media screen (max-width: 931px) {
+}*/
+/*
+@media screen (max-width: 767px) {
   .tableParent{
     text-align: left;
   }
